[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/battleback1.png" type="Texture" id=1]
[ext_resource path="res://sprites/Dragon.png" type="Texture" id=2]
[ext_resource path="res://src/Battle.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.635294, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.847059, 0.027451, 0.027451, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.623529 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[node name="Battle" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -120.0
margin_right = 160.0
margin_bottom = 120.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -141.0
margin_right = 889.0
margin_bottom = 480.0
rect_scale = Vector2( 0.4, 0.45 )
texture = ExtResource( 1 )

[node name="EnemyContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -65.0
margin_right = 87.5
margin_bottom = 65.0

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
margin_right = 175.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HP: 20/50"
align = 1
valign = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
margin_top = 20.0
margin_right = 175.0
margin_bottom = 116.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
custom_styles/panel = SubResource( 3 )

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 10.0
margin_right = 148.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Player"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 152.0
margin_top = 9.0
margin_right = 300.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HP: 20/50"
align = 1
valign = 1

[node name="ActionsPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 35.0
custom_styles/panel = SubResource( 3 )

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/separation = 6

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
margin_right = 99.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "ATTACK"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
margin_left = 105.0
margin_right = 204.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "DEFEND"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
margin_left = 210.0
margin_right = 310.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "RUN"

[node name="TextBox" type="Panel" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 49.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
text = "Some Text Here!"

[node name="Ticker" type="Label" parent="TextBox"]
margin_left = 291.0
margin_top = 23.0
margin_right = 299.0
margin_bottom = 37.0
text = ">"

[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_Run_pressed"]
